--- a/student/templates/student/index.html
+++ b/student/templates/student/index.html
@@ -5,11 +5,11 @@
     <title>Student Mode</title>
 </head>
 <body>
-<form>
-    Course Name: <input type ="text" name="Course name" > <br>
-    Field: <input type ="text" name="Field" > <br>
-    Semester: <input type ="text" name="Semester" > <br> <br>
-    <input type ="Submit"  value="Submit" >
+<form action="StudyPlan.html" method="post">{% csrf_token %}
+    Course Name: <input type ="text" name="CourseName" > <br><br><br>
+    Field: <input type ="text" name="Field" > <br><br><br>
+    Semester: <input type ="text" name="Semester" > <br> <br><br><br><br>
+    <button type ="submit" >Submit</button>
 </form>
 </body>
 </html>
