--- a/student/templates/student/index.html
+++ b/student/templates/student/index.html
@@ -5,11 +5,10 @@
     <title>Student Mode</title>
 </head>
 <body>
-<form action="StudyPlan.html" method="post">{% csrf_token %}
-    Course Name: <input type ="text" name="CourseName" > <br><br><br>
-    Field: <input type ="text" name="Field" > <br><br><br>
-    Semester: <input type ="text" name="Semester" > <br> <br><br><br><br>
-    <button type ="submit" >Submit</button>
-</form>
+	<form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="submit btn btn-default">Submit</button>
+    </form>
 </body>
 </html>
