Database entries added

--- a/student/templates/student/StudyPlan.html
+++ b/student/templates/student/StudyPlan.html
@@ -8,5 +8,10 @@
 	{% for unit in units %}
 		<ul>{{ unit.UnitName }}</ul>
 	{% endfor %}
+	<br><br><br>
+	<form action="FinalStudyPlan.html" method = "get">
+	<input type="checkbox" name="name" value="box">Checkbox<br>
+	<input type = "submit" value = "Submit">
+	</form>
 </body>
 </html>
