--- a/student/templates/student/FinalStudyPlan.html
+++ b/student/templates/student/FinalStudyPlan.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>tijtkk</title>
-</head>
-<body>
-<h1> final plan </h1>
-</body>
-</html>
+{% extends 'student/base.html' %}
+{% block body %}
+
+{% endblock %}
