--- a/student/templates/student/index.html
+++ b/student/templates/student/index.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Student Mode</title>
-</head>
-<body>
+{% extends 'student/base.html' %}
+{% block body %}
+<br><br><br>
 	<form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="submit btn btn-default">Submit</button>
     </form>
-</body>
-</html>
+{% endblock %}
