--- a/student/templates/student/base.html
+++ b/student/templates/student/base.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
     <div class="container-fluid">
 
         <!-- Header -->
@@ -23,24 +23,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a  class="navbar-header" href="{% url 'student:index' %}"><img src="images/Logo.png"></a>
+            <a  class="navbar-brand" href="https://www.cdu.edu.au/"><img src="static/student/images/Logo.png" ></a>
         </div>
 
         <!-- Items -->
         <div class="collapse navbar-collapse" id="topNavBar">
-            <ul class="nav navbar-nav">
-            	<li>rctvbjnbmrf</li>
-            	<li>vjhfbj</li>
-                </ul>
-            <form class="navbar-form navbar-left" role="search" method="get" action="">
-                <div class="form-group">
-                    <input type="text" class="form-control" name="q" value="{{ request.GET.q }}">
-                </div>
-                <button type="submit" class="btn btn-default">Search</button>
-            </form>
             <ul class="nav navbar-nav navbar-right">
-                <li>hkijgtika
-                    </li>
+                <li class="active">
+                    <a  class="navbar-header" href="{% url 'student:index' %}">
+                        <span class="glyphicon glyphicon-user"></span>&nbsp; Student
+                    </a>
+                </li>
             </ul>
         </div>
 
