--- a/lecturer/templates/lecturer/base.html
+++ b/lecturer/templates/lecturer/base.html
@@ -7,7 +7,7 @@
     {% load staticfiles %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="{% static 'student/style.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'lecturer/style.css' %}"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
@@ -24,7 +24,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a  class="navbar-brand" href="https://www.cdu.edu.au/"><img src="student/static/student/images/Logo.png" ></a>
+            <a  class="navbar-brand" href="https://www.cdu.edu.au/"><img src="static/student/images/Logo.png" ></a>
         </div>
 
         <!-- Items -->
