--- a/student/templates/student/index.html
+++ b/student/templates/student/index.html
@@ -1,9 +1,46 @@
 {% extends 'student/base.html' %}
 {% block body %}
-<br><br><br>
+<style type="text/css">
+    .error_message{
+        color: red;
+        text-align: center;
+        display: inline-block;
+        margin: auto;
+        width: 50%;
+        padding: 10px;
+    }
+    .create_study_plan_form{
+        text-align: center
+        display: inline-block;
+        margin: auto;
+        width: 50%;
+        padding: 10px;
+    }
+    .CDU{
+        text-align: center
+        display: inline-block;
+        margin: auto;
+        width: 50%;
+        padding: 50px;
+    }
+</style>
+
+
+<div class="CDU">
+    <h2>CDU Course Support System</h2>
+</div>
+
+<div class="error_message">
+    {% if error_message %}
+        <p><strong>{{ error_message }}</strong></p>
+    {% endif %}
+</div>
+
+<div class="create_study_plan_form">
 	<form action="{% url 'student:index' %}" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="submit btn btn-default">Submit</button>
+        <button type="submit" class="submit btn btn-default">Create Study Plan</button>
     </form>
+</div>
 {% endblock %}
