--- a/lecturer/templates/lecturer/base.html
+++ b/lecturer/templates/lecturer/base.html
@@ -30,14 +30,10 @@
         <!-- Items -->
         <div class="collapse navbar-collapse" id="topNavBar">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active">
-                    <a  class="navbar-header" href="{% url 'student:index' %}">
-                        <span class="glyphicon glyphicon-user"></span>&nbsp; Student
-                    </a>
-                </li>
+                {% block right_nav %}
+                {% endblock %}
             </ul>
         </div>
-
     </div>
 </nav>
 {% block body %}
