--- a/lecturer/templates/lecturer/lecturer_login.html
+++ b/lecturer/templates/lecturer/lecturer_login.html
@@ -1,17 +1,67 @@
+{% extends 'lecturer/base.html' %}
 
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
+{% block title %}Lecturer Login{% endblock %}
+
+
+{% block right_nav %}
+	<li class="">
+		<a  class="navbar-header" href="{% url 'student:index' %}">Student</a>
+	</li>
+{% endblock %}
+
+
+{% block body %}
+
+<style type="text/css">
+    .lecturer_log_in_page{
+        text-align: center
+        display: inline-block;
+        margin: auto;
+        width: 50%;
+        padding: 10px;
+    }
+    .CDU{
+        text-align: center
+        display: inline-block;
+        margin: auto;
+        width: 50%;
+        padding: 50px;
+    }
+
+    .form-signin {
+      width: 100%;
+      max-width: 330px;
+      padding: 15px;
+      margin: auto;
+    }
+    .form-signin .form-control {
+      position: relative;
+      box-sizing: border-box;
+      height: auto;
+      padding: 10px;
+      font-size: 16px;
+    }
+    .form-signin .form-control:focus {
+      z-index: 2;
+    }
+</style>
+
+<div class="lecturer_form_content">
+    <div class="CDU">
+        <h2>CDU Course Support System</h2>
+    </div>
     <div class="lecturer_log_in_page">
-        <form action="{% url 'lecturer:lecturer_login' %}" method="POST">
+        <form action="{% url 'lecturer:lecturer_login' %}" method="POST" class="form-signin">
             {% csrf_token %}
             {{ form.as_p }}
             {{ form.path }}
             <input type="submit" value="Login">
         </form>
     </div><!--- end lecturer_log_in_page --->
-</body>
-</html>
+    <div class="error_message">
+        {% if error_message %}
+            {{ error_message }}
+        {% endif %}
+    </div><!--- end error_message --->
+</div><!--- end lecturer_form_content --->
+{% endblock %}
