--- a/student/templates/student/study_plan.html
+++ b/student/templates/student/study_plan.html
@@ -1,4 +1,19 @@
 {% extends 'student/base.html' %}
+
+{% block nav_right%}
+    <li class="active">
+        <a  class="navbar-header" href="{% url 'student:index' %}">
+            <span class="glyphicon glyphicon-user"></span>&nbsp; Student
+        </a>
+    </li>
+    <li class="active">
+        <a  class="navbar-header" href="{% url 'lecturer:lecturer_login' %}">
+            <span class="glyphicon glyphicon-user"></span>&nbsp; Lecturer
+        </a>
+    </li>
+{% endblock %}
+
+
 {% block body %}
 
 <style type="text/css">
