--- a/student/templates/student/study_plan.html
+++ b/student/templates/student/study_plan.html
@@ -86,97 +86,115 @@
 		}
 	}
 
-	function delete_confirmation(selected_unit_button_id, selected_unit_name){
-	    var delete_confirmation_pop_up = confirm("Confirm that you wanna delete "+selected_unit_name);
-	    if (delete_confirmation_pop_up == false){
-			document.getElementById(selected_unit_button_id).checked = false;
-		}
-	}
+//	function delete_confirmation(selected_unit_button_id, selected_unit_name){
+//	    var delete_confirmation_pop_up = confirm("Confirm that you wanna delete "+selected_unit_name);
+//	    if (delete_confirmation_pop_up == false){
+//			document.getElementById(selected_unit_button_id).checked = false;
+//		}
+//	}
 </script>
 
 
-<div class="row" id="features">
-	<div class="col-sm-6 features" id="SelectedUnits">
-        <div class="delete_unit_form">
-            <form action="{% url 'student:delete_unit' course_field course_code semester year %}" method="post">
+<div class="container" >
+
+    <div class="row" id="features">
+        <div class="col-sm-5 features" id="SelectedUnits">
+            {% if error_message %}
+                {{ error_message }}
+            {% endif %}
+            {% if unit_for_div %}
+                <h4>List of Selected Units</h4>
+                <div class="delete_unit_form">
+                    <form action="{% url 'student:delete_unit' course_field course_code semester year %}" method="post">
+                        {% csrf_token %}
+                        <table class="table table-hover">
+                            <thead>
+                              <tr>
+                                <th>Unit Name</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                                {% for div_unit in unit_for_div %}
+                                    <tr>
+                                        <td>
+                                            <input type="radio" id="div_unit{{ forloop.counter }}" name="div_unit" value="{{ div_unit.UnitCode }}" onclick="delete_confirmation('div_unit{{ forloop.counter }}', '{{ div_unit.UnitName }}')" />
+                                            <label for="div_unit{{ forloop.counter }}">
+                                                {% if div_unit.PreRequisite %}
+                                                    <div class="unit_with_prerequisite">
+                                                        {{ div_unit.UnitName }}
+                                                    </div><!--- end "unit_with_prerequisite" --->
+                                                {% else %}
+                                                    <div class="unit_without_prerequisite" >
+                                                        {{ div_unit.UnitName }}
+                                                    </div><!--- end "unit_without_prerequisite" --->
+                                                {% endif %}
+                                            </label>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                        <br><br>
+                        <input type="submit" value="Remove Unit">
+                    </form><!--- end delete_form --->
+                </div><!--- end delete_unit_form --->
+
+                <form action="{% url 'student:final_study_plan' course_field course_code semester year %}" method="post">
+                    {% csrf_token %}
+                    <br><br>
+                    <input type="submit" value="Final Study Plan">
+                </form><!--- end study plan form --->
+            {% endif %}
+        </div><!--- end SelectedUnits--->
+
+
+        <div class="col-sm-6 features" id="ToSelectUnit">
+            <strong><h4>List of Units For {{ course_code }} in {{ course_field }} for semester {{ semester }}
+            </h4></strong>
+            <form action="{% url 'student:add_unit' course_field course_code semester year %}" method="post">
                 {% csrf_token %}
-                {% if error_message %}
-                    <p><strong>{{ error_message }}</strong></p>
-                {% endif %}
-                {% for div_unit in unit_for_div %}
-                    <input type="radio" id="div_unit{{ forloop.counter }}" name="div_unit" value="{{ div_unit.UnitCode }}" onclick="delete_confirmation('div_unit{{ forloop.counter }}', '{{ div_unit.UnitName }}')" />
-                    <label for="div_unit{{ forloop.counter }}">
-                        {% if div_unit.PreRequisite %}
-                            <div class="unit_with_prerequisite">
-                                {{ div_unit.UnitName }}
-                            </div><!--- end "unit_with_prerequisite" --->
-                        {% else %}
-                            <div class="unit_without_prerequisite" >
-                                {{ div_unit.UnitName }}
-                            </div><!--- end "unit_without_prerequisite" --->
-                        {% endif %}
-                    </label><br>
-                {% endfor %}
-                {% if point_error_message %}
-                    {{ point_error_message }}
-                {% endif %}
-                <br><br>
-                <input type="submit" value="Delete Unit">
-            </form><!--- end delete_form --->
-        </div><!--- end delete_unit_form --->
-
-        <form action="{% url 'student:core_unit' course_field course_code semester year %}" method="post">
-            {% csrf_token %}
-            <input type="submit" value="Core Unit">
-        </form>
-        <form action="{% url 'student:common_unit' course_field course_code semester year %}" method="post">
-            {% csrf_token %}
-            <input type="submit" value="Common Unit">
-        </form>
-        <form action="{% url 'student:specialist_elective' course_field course_code semester year %}" method="post">
-            {% csrf_token %}
-            <input type="submit" value="Specialist Elective">
-        </form>
-        <form action="{% url 'student:research_unit' course_field course_code semester year %}" method="post">
-            {% csrf_token %}
-            <input type="submit" value="Research Unit">
-        </form>
+                <table class="table table-hover">
+                    <thead>
+                      <tr>
+                        <th>Unit Name</th><th>Unit Code</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                        {% for unit in units %}
+                            <tr>
+                                <td>
+                                    <div class="unit_radio_button">
+                                        <input type="radio" id="unit{{ forloop.counter }}" name="unit" value="{{ unit.UnitCode }}" onclick="Unit_PreRequisite_Info('unit{{ forloop.counter }}', '{{ unit.UnitCode }}', '{{ unit.UnitName }}')" />
+                                        <label for="unit{{ forloop.counter }}">
+                                            {{ unit.UnitName}}
+                                        </label>
+                                    </div><!--- end "unit_radio_button" --->
+                                </td>
+                                <td>{{ unit.UnitCode}}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+                <input type="submit" value="Add" >
+            </form><!---end form--->
+        </div><!--- end ToSelectUnit--->
 
 
 
-        <form action="{% url 'student:final_study_plan' course_field course_code semester year %}" method="post">
-            {% csrf_token %}
-            <br><br>
-<!--            <div class="final_study_plan_buttons" >-->
-            <input type="submit" value="Final Study Plan">
-<!--            </div>&lt;!&ndash;- end final_study_plan_buttons -&ndash;&gt;-->
-        </form><!--- end study plan form --->
-	</div><!--- end SelectedUnits--->
-	<div class="col-sm-6 features" id="ToSelectUnit">
-        <strong><p>List of Units For {{ course_code }} in {{ field }} for semester {{ semester }}
-        <div class="dropdown">
-          <button class="dropbtn">Filter</button>
-          <div class="dropdown-content">
-            <a href="{% url 'student:core_unit' course_field course_code semester year %}">Core Unit</a>
-            <a href="{% url 'student:common_unit' course_field course_code semester year %}">Common Unit</a>
-            <a href="{% url 'student:research_unit' course_field course_code semester year %}">Research Unit</a>
-          </div><!--- end dropdown-content --->
-        </div><!--- end dropdown --->
-        </p></strong>
-		<form action="{% url 'student:check_prerequisite' course_field course_code semester year %}" method="post">
-			{% csrf_token %}
-			{% for unit in units %}
-                <div class="unit_radio_button">
-					<input type="radio" id="unit{{ forloop.counter }}" name="unit" value="{{ unit.UnitCode }}" onclick="Unit_PreRequisite_Info('unit{{ forloop.counter }}', '{{ unit.UnitCode }}', '{{ unit.UnitName }}')" />
-					<label for="unit{{ forloop.counter }}">
-						{{ unit.UnitName}} - {{ unit.UnitCode }} - {{ unit.Points }} - {{ unit.Type }}
-					</label><br>
-				</div><!--- end "unit_radio_button" --->
-			{% endfor %}
-			<input type="submit" value="Add" >
-		</form><!---end form--->
-	</div><!--- end ToSelectUnit--->
-</div><!--- end features--->
+        <div class="col-sm-1 features" id="filter_div">
+            <div class="dropdown">
+              <button class="dropbtn">Filter</button>
+              <div class="dropdown-content">
+                  <a href="{% url 'student:all_unit' course_field course_code semester year %}">All</a>
+                  <a href="{% url 'student:core_unit' course_field course_code semester year %}">Core Unit</a>
+                  <a href="{% url 'student:common_unit' course_field course_code semester year %}">Common Unit</a>
+                  <a href="{% url 'student:specialist_elective' course_field course_code semester year %}">Specialist Elective</a>
+                  <a href="{% url 'student:research_unit' course_field course_code semester year %}">Research Unit</a>
+              </div><!--- end dropdown-content --->
+            </div><!--- end dropdown --->
+        </div><!--- end filter_div --->
+    </div><!--- end features--->
+</div><!--- end container --->
 {% endblock %}
 
 
