--- a/lecturer/templates/lecturer/base.html
+++ b/lecturer/templates/lecturer/base.html
@@ -29,7 +29,7 @@
         color: black;
         font-size: 20px;
         padding-top: 20px;
-        padding-bottom: px;
+        padding-bottom: 0px;
     }
 
     img {
@@ -41,6 +41,50 @@
         float: left;
         display: inline-block;
     }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+      width: 100%;
+      overflow:auto;
+    }
+
+    .dropdown-content a {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
+    .dropdown-content a:hover {background-color: #ddd;}
+
+    .dropdown:hover .dropdown-content {display: block;}
+
+    .dropdown:hover .dropbtn {background-color: black; color: white;}
+
+    .dropbtn{
+        display: inline-block;
+        border-radius: 12px;
+        text-align: center;
+        font-size: 14px;
+        margin: 5px;
+        padding: 10px 15px;
+        background-color: #c7cde8;
+    }
+
+    .dropdown .dropbtn {
+        color: black;
+        font-size: 20px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+          border: none;
+          outline: none;
+    }
+
+
 
     </style>
 </head>
