--- a/lecturer/templates/lecturer/lecturer_login.html
+++ b/lecturer/templates/lecturer/lecturer_login.html
@@ -21,7 +21,6 @@
         margin: auto;
         width: 100%;
         padding: 50px;
-        font-family: Georgia, serif;
         font-size: 24px;
     }
 
@@ -42,7 +41,6 @@
         margin: auto;
         width: 100%;
         padding: 10px;
-        font-family: Georgia, serif;
         font-size: 18px;
     }
 
@@ -52,7 +50,6 @@
         margin: auto;
         width: 100%;
         padding: 50px;
-        font-family: Georgia, serif;
         font-size: 24px;
     }
 
@@ -77,12 +74,22 @@
         color: white;
     }
 
+    .error_message{
+        color: red;
+        font-size: 20px;
+    }
+
 </style>
 
 <div class="lecturer_form_content">
     <div class="CDU">
         <h2>CDU Course Support System</h2>
     </div>
+    <div class="error_message">
+        {% if error_message %}
+            <strong><center>{{ error_message }}</center></center></strong>
+        {% endif %}
+    </div><!--- end error_message --->
     <div class="lecturer_log_in_page">
         <form action="{% url 'lecturer:lecturer_login' %}" method="POST" class="form-signin">
             {% csrf_token %}
@@ -97,11 +104,5 @@
             <button class="button" type="submit" style="vertical-align:middle" ><span>Login</span></button>
         </form>
     </div><!--- end lecturer_log_in_page --->
-
-    <div class="error_message">
-        {% if error_message %}
-            {{ error_message }}
-        {% endif %}
-    </div><!--- end error_message --->
 </div><!--- end lecturer_form_content --->
 {% endblock %}
